# LightBase

./: .SRCINFO  .gitignore  Makefile  PKGBUILD  README.md  requirements.txt  staging_lightbase.db  test_all.py  test_lightbase.db
bridge/: enterprise.py  lb-cli.sh  pyproject.toml  python_bridge.py
core/: CMakeLists.txt  library.h
core/build_release/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  lb-cli  prod_lightbase.sovereign.db  staging_lightbase.db  test_lightbase.db
core/include/: engine.h  storage.h  tlv.h
core/src/: ai_core.c  arena.c  assert_engine.c  collections.c  crypto_vault.c  database.c  engine.c  git_sync.c  git_watcher.c  lb_cli.c  schema_docs.c  security.c  storage.c  sys_monitor.c  thread_pool.c  tlv.c
debian/: control  debhelper-build-stamp  files  lightbase.substvars  rules
debian/lightbase/DEBIAN/: control  md5sums
debian/lightbase/opt/lightbase/bridge/: enterprise.py
debian/lightbase/opt/lightbase/core/build_release/: lb-cli
debian/lightbase/opt/lightbase/core/include/: arena.h  engine.h  storage.h  sys_monitor.h
debian/lightbase/opt/lightbase/ui/: app.js  features.js  index.html  package.json  style.css
debian/lightbase/usr/share/applications/: lightbase.desktop
docs/: user_guide.md
ui/: features.js  index.html  package.json
workspace/collections/: jio_plans.json  jio_plans_v2.json  test_fork.json  test_suite_col.json
workspace/comments/: test_api.json  test_suite_col.json
workspace/docs/: openapi_spec.json
workspace/environments/: dev.json  test_env.json
workspace/flows/: test_flow.json  untitled.json
workspace/mocks/: test_mock.json
workspace/plugins/: response_analyzer.py
